--- a/profile-management/pm.css
+++ b/profile-management/pm.css
@@ -1,58 +1,28 @@
-body{
+body {
     margin: 0;
-    padding: 0;
+    padding: 10%;
     font-family: montserrat;
     height: 100vh;
-    overflow: hidden;
-    background: black;
+    background: #03422D;
+    
   }
-  .center{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    background: white;
-    border-radius: 10px;
-  }
-  .center h1{
-    text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid silver;
-  }
-  .center form{
-    padding: 0 40px;
-    box-sizing: border-box;
-  }
-  form .txt_field{
-    position: relative;
-    margin: 30px 0;
-  }
-  .txt input{
-    width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
-    outline: none;
-  }
-  .txt_field label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: .5s;
-  }
-  .txt_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    transition: .5s;
-  }
+
+h1 {
+    color: aqua;
+}
+
+form .txt_field {
+    margin: 10px 0;
+}
+
+input[type=text] {
+    padding: 0 28px;   
+}
+
+label {
+    color: white
+}
+
+input[type=submit] {
+    background-color: cyan;
+}
