add routing and controller templates

--- a/views/quoteform.html
+++ b/views/quoteform.html
@@ -14,10 +14,10 @@
   <div id="wrapper">
     <head>
       <meta charset="UTF-8" />
-      <link rel="stylesheet" href="../public/css/quoteform.css" />
+      <link rel="stylesheet" href="css/quoteform.css" />
       <header><title>Quote Form</title></header>
       <img
-        src="../public/img/fuel-pump.png"
+        src="img/fuel-pump.png"
         alt="fuel"
         width="175"
         height="100"
