--- a/views/quotehistory.html
+++ b/views/quotehistory.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuel Quote History</title>
-    <link rel="stylesheet" href="../public/css/history.css"
+    <link rel="stylesheet" href="css/history.css"
   </head>
   <body>
     <div class="center">
