add post test to fuel quote form

--- a/views/quoteform.html
+++ b/views/quoteform.html
@@ -36,6 +36,7 @@
                 id="galsReqd"
                 max="11,000"
                 min="2500"
+                name="gallons"
                 required
               />
               <label for="delivDate"><b>Delivery Date:</b></label>
@@ -44,6 +45,7 @@
                 id="delivDate"
                 min="2023-2-22"
                 max="2023-12-31"
+                name="date"
                 required
               />
             </p>
