--- a/views/quoteform.html
+++ b/views/quoteform.html
@@ -28,7 +28,7 @@
       <main>
         <h1>Fuel Quote Form</h1>
         <fieldset>
-          <form action="url to send info" method="post">
+          <form method="post">
             <p>
               <label for="galsReqd"><b>Gallons Requested:</b> </label>
               <input
