--- a/views/quoteform.html
+++ b/views/quoteform.html
@@ -33,6 +33,7 @@
               <label for="galsReqd"><b>Gallons Requested:</b> </label>
               <input
                 type="number"
+                name="gallons"
                 id="galsReqd"
                 max="11,000"
                 min="2500"
@@ -41,6 +42,7 @@
               <label for="delivDate"><b>Delivery Date:</b></label>
               <input
                 type="date"
+                name="date"
                 id="delivDate"
                 min="2023-2-22"
                 max="2023-12-31"
