--- a/views/quoteform.html
+++ b/views/quoteform.html
@@ -14,7 +14,7 @@
   <div id="wrapper">
     <head>
       <meta charset="UTF-8" />
-      <link rel="stylesheet" href="/css/quoteform.css" />
+      <link rel="stylesheet" href="../public/css/style.css" />
       <header><title>Quote Form</title></header>
       <img
         src="/img/fuel-pump.png"
