--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #03422d;
+  background-color: #000000;
   color: whitesmoke;
   display: grid;
   place-content: center;
