--- a/views/login.html
+++ b/views/login.html
@@ -3,26 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Login Form</title>
-  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="../public/css/style.css">
 </head>
 
 <body>
   <div class="center">
     <h1>Login</h1>
-    <form method="post">
+    <form action= "//localhost:3500/login" method="post">
       <div class="txt_field">
-        <input type="text" name="username" required>
+        <input 
+          type="text" 
+          name="username" 
+          required
+          placeholder="username">
         <span></span>
-        <label>Username</label>
+        <!-- <label>Username</label> -->
       </div>
       <div class="txt_field">
-        <input type="password" name="password" required>
+        <input 
+          type="password" 
+          name="password" 
+          required
+          placeholder="password">
         <span></span>
-        <label>Password</label>
+        <!-- <label>Password</label> -->
       </div>
       <input type="submit" value="Login">
       <div class="register_link">
-        New Client? <a href="index1.html">Register</a>
+        New Client? <a href="register.html">Register</a>
       </div>
     </form>
   </div>
