--- a/views/profile.html
+++ b/views/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Profile Management</title>
-  <link rel="stylesheet" href="/css/pm.css" />
+  <link rel="stylesheet" href="../public/css/style.css" />
 </head>
 
 <body>
