--- a/views/register.html
+++ b/views/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Register Form</title>
-  <link rel="stylesheet" href="/css/register.css" />
+  <link rel="stylesheet" href="../public/css/style.css" />
 </head>
 
 <body>
